<resources>

    <string name="app_name">滨海视窗</string>
    <string name="tab_news">新闻</string>
    <string name="tab_hot">热点</string>
    <string name="tab_user">我的</string>
    <string name="detail">详情</string>
    <!--提示语-->
    <string name="caution_quite">再按一次将退出</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>


    <!--<option value="0">要闻</option>-->
    <!--<option value="1">街镇</option>-->
    <!--<option value="2">热点</option>-->
    <!--<option value="3">教育</option>-->
    <!--<option value="4">文化</option>-->
    <!--<option value="5">科技</option>-->
    <!--<option value="6">娱乐</option>-->
    <!--<option value="7">财经</option>-->


    <!--<string name="category_all_my">推荐</string>-->
    <string name="category_all">推荐</string>
    <string name="category_important">要闻</string>
    <string name="category_nearby">街镇</string>
    <string name="category_hot">热点</string>
    <string name="category_education">教育</string>
    <string name="category_culture">文化</string>
    <string name="category_tech">科技</string>
    <string name="category_entertainment">娱乐</string>
    <string name="category_finance">财经</string>
    <string name="category_society">社会</string>
    <string name="category_subscribe">订阅</string>
    <string name="category_video">视频</string>
    <string name="category_health">健康</string>
    <string name="category_sports">体育</string>
    <string name="category_car">汽车</string>
    <string name="category_military">军事</string>
    <string name="category_world">国际</string>
    <string name="category_positive">正能量</string>
    <string name="category_essay_joke">段子</string>
    <string name="category_image_funny">趣图</string>
    <string name="category_image_ppmm">美女</string>
    <string name="category_movie">电影</string>
    <string name="category_digital">数码</string>
    <string name="category_news_fashion">时尚</string>
    <string name="category_rumor">辟谣</string>
    <string name="category_marvel">奇葩</string>
    <string name="category_news_game">游戏</string>
    <string name="category_news_travel">旅游</string>
    <string name="category_news_baby">育儿</string>
    <string name="category_fitness">减肥</string>
    <string name="category_news_regimen">养生</string>
    <string name="category_news_food">美食</string>
    <string name="category_government">政务</string>
    <string name="category_news_history">历史</string>
    <string name="category_news_discovery">探索</string>
    <string name="category_news_story">故事</string>
    <string name="category_news_essay">美文</string>
    <string name="category_emotion">情感</string>
    <string name="category_essay_saying">语录</string>
    <string name="category_image_wonderful">美图</string>
    <string name="category_news_house">家居</string>
    <string name="category_news_home">房产</string>
    <string name="category_funny">搞笑</string>
    <string name="category_news_astrology">星座</string>
    <string name="category_news_culture">文化</string>
    <string name="category_graduate">毕业生</string>


    <!--爆料-->
    <string name="title_disclose">我要爆料</string>
    <string name="disclose">爆料</string>
    <string name="disclose_info">新鲜、热辣、八卦爆个不停</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="support">赞</string>
    <string name="discuss">评论</string>
    <string name="opposition">踩</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="disclose_hint">分享身边新鲜事&#8230;</string>
    <string name="disclose_list_title">爆料</string>
    <string name="make_disclose">爆个料</string>
    <string name="disclose_introductions_title">爆料说明</string>
    <string name="disclose_introductions">欢迎使用滨海视窗客户端“我要爆料”，分享你身边的新鲜事，与
        数千万网友互动交流！爆料范围包括但不限于个人见闻、社会热点，为了更好的分享交流，请尽量以“图+文”方式描述
        事情。被成功采纳的爆料内容，将会进入话题：爆料，并有机会进入信息流推荐。</string>

    <!--用户信息-->
    <string name="user_title">个人主页</string>
    <string name="user_status">这个人很懒，什么都没有写</string>
    <string name="user_discuss">我的评论</string>
    <string name="versions">版本信息</string>
    <string name="settings">设置</string>
    <string name="user_info">个人信息</string>
    <string name="complete">完成</string>
    <string name="photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="login">点击登录</string>
    <string name="status">签名</string>
    <string name="change_password">修改密码</string>
    <string name="logout">退出登录</string>

    <string name="image_from_camera">拍照</string>
    <string name="image_from_gallery">从手机相册选择</string>
    <string name="user_userinfo_nosdcard">无SD卡</string>
    <string name="user_userinfo_takephoneError_notsupport">设备不支持相机功能</string>
    <string name="user_userinfo_takephoneError_take_failed">拍照失败</string>
    <string name="user_userinfo_takephoneError_cut_failed">剪切图片失败</string>

    <!-- 搜索-->
    <string name="search_hint">请输入关键字搜索感兴趣的内容</string>
    <string name="search_default_hint">搜索感兴趣的内容</string>

    <string name="search_article">文章</string>
    <string name="search_channel">频道</string>
    <string name="search_number">头条号</string>
    <string name="search_video">视频</string>
    <!-- 新闻详细-->
    <string name="news_discuss">我来说两句</string>
    <string name="publish">发表</string>
    <string name="related_news">相关阅读</string>
    <string name="hot_discuss">热门评论</string>
    <string name="loading">正在加载...</string>

    <!-- 评论-->
    <string name="input_discuss">写评论...</string>

    <!-- 分享-->
    <string name="share_cancel">取消分享</string>
    <string name="share_wechat">微信</string>
    <string name="share_moments">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_blog">QQ空间</string>

    <!-- 用户-->
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="register_username">账号:</string>
    <string name="register_password">密码:</string>
    <string name="register_password_repeat">确认密码:</string>
    <string name="register_email">邮箱:</string>
    <string name="register_nickname">昵称:</string>
    <string name="login_error_0">用户名不存在</string>
    <string name="login_error_1">密码错误</string>
    <string name="login_error_2">未知错误</string>
    <string name="login_error_3">该邮箱已注册，请直接登录</string>
    <string name="login_error_4">该昵称已被占用</string>
    <string name="login_error_5">邮箱不能为空</string>
    <string name="login_error_6">邮箱格式错误</string>
    <string name="login_error_7">密码不能为空</string>
    <string name="login_error_8">密码格式错误</string>

    <string name="register_error_0">两次输入密码不一致</string>

    <string name="login_failed_hint_1">登录失败</string>
    <string name="login_failed_hint_2">请重试</string>
    <string name="login_failed_hint_3">注册失败</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="reset_password_title">重置密码</string>
    <string name="reset_password_label">新密码:</string>
    <string name="reset_password_repeat_label">确认新密码:</string>

    <string name="edit_nick_name_title">请输入昵称</string>
    <string name="edit_nick_name_hint">2-20个字，支持中文、英文、数字、"&#8211;"和减号</string>
    <string name="edit_status_title">请输入个性签名</string>

    <string name="setting_user_proDia_message_upload">上传中&#8230;</string>

    <!-- 设置-->
    <string name="title_settings">设置</string>

    <!-- 通知-->
    <string name="title_notification">通知</string>

    <!-- 活动-->
    <string name="title_activity">活动</string>
</resources>
