<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_edit_nickname"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_status_title"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/dialog_edit_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:maxLength="100"
        android:minHeight="60dp"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:singleLine="false"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/dialog_edit_status_cancel"
            android:layout_width="65dp"
            android:layout_height="26dp"
            android:background="@drawable/btn_edit_nickname_cancel_nal"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/dialog_edit_status_confirm"
            android:layout_width="65dp"
            android:layout_height="26dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_edit_nickname_confirm"
            android:text="@string/confirm"
            android:textColor="@color/white"/>
    </RelativeLayout>
</LinearLayout>