<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/activity_search_cancel"
            android:background="@drawable/search_frame"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9dp"
                android:background="@mipmap/icon_search"/>
            <EditText
                android:id="@+id/activity_search_keyword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/search_hint"
                android:singleLine="true"
                android:textColor="@color/category_tab_text"
                android:textColorHint="@color/hint_text_color"
                android:textSize="14sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/activity_search_cancel"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:background="@color/transparency"
            android:text="@string/cancel"
            android:textColor="#254a8c"
            android:textSize="17sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/divider"/>
    </RelativeLayout>

    <com.bhsc.mobile.disclose.views.MyListView
        android:id="@+id/activity_search_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/activity_search_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:text="@string/search_default_hint"
            android:textColor="@color/hint_text_color"
            android:textSize="24sp"
            />
        <!-- divider-->
        <View
            android:layout_marginTop="20dp"
            android:layout_width="214dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/divider"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/icon_search_article"
                    />
                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_article"
                    android:textColor="@color/hint_text_color"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/icon_search_channel"
                    />
                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_channel"
                    android:textColor="@color/hint_text_color"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/icon_search_number"
                    />
                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_number"
                    android:textColor="@color/hint_text_color"
                    android:textSize="12sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/icon_search_video"
                    />
                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_video"
                    android:textColor="@color/hint_text_color"
                    android:textSize="12sp"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>