<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#eeeeee"
    >

    <RelativeLayout
        android:id="@+id/fragment_disclose_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_disclose"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/fragment_disclose_title_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@mipmap/btn_disclose_menu"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_disclose_title"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/fragment_disclose_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >

            <RelativeLayout
                android:id="@+id/fragment_disclose_create"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/fragment_disclose_disclose_icon"
                    android:layout_width="43dp"
                    android:layout_height="43dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:background="@mipmap/icon_disclose"
                    />

                <LinearLayout
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/fragment_disclose_disclose_icon"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disclose"
                        android:textColor="@color/black"
                        android:textSize="23dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disclose_info"
                        android:textColor="#999999"
                        android:textSize="16sp"
                        />
                </LinearLayout>
                <View android:layout_width="8dp"
                      android:layout_height="13dp"
                      android:layout_alignParentRight="true"
                      android:layout_centerVertical="true"
                      android:layout_marginRight="15dp"
                      android:background="@mipmap/arrow_all_normal"/>
            </RelativeLayout>

            <com.bhsc.mobile.disclose.views.MyListView
                android:id="@+id/fragment_disclose_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:dividerHeight="2px"
                android:divider="#55cccccc"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>